Bug 303091 JS Exception when changing print scale patch by b.jacques@planet.nl r=timeless sr=shaver a=cbeard